# tiny-rasp

./: .gitignore  Cargo.toml  README.md  ai_key.agents_.md  package.json
crates/aiscan/: Cargo.toml
crates/aiscan/src/: detection.rs  heuristic.rs  http.rs  lib.rs  rasp.rs
crates/check-ai-key/: Cargo.toml
crates/check-ai-key/src/: halt_prompt.md  main.rs  reveal.json
crates/keyguard/: Cargo.toml
crates/keyguard/src/: lib.rs
