[workspace]
members = [
  "crates/aiscan",
  "crates/keyguard",
  "crates/check-ai-key",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MPL-2.0"
repository  = "https://github.com/portal-co/tiny-rasp"

[workspace.dependencies]
anyhow     = "1"
embedded-io = { version = "0.7", default-features = false }
reqwest    = { version = "0.12", features = ["json", "blocking"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
regex      = "1"
# env crates from os-env-traits
env-traits = { git = "https://github.com/portal-co/os-env-traits.git" }
env-fake   = { git = "https://github.com/portal-co/os-env-traits.git" }
env-real   = { git = "https://github.com/portal-co/os-env-traits.git" }
# workspace crates
aiscan   = { path = "crates/aiscan" }
keyguard = { path = "crates/keyguard" }
