[workspace]
members = [
  "crates/aiscan",
  "crates/keyguard",
  "crates/check-ai-key",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MPL-2.0"
repository  = "https://github.com/portal-co/tiny-rasp"

[workspace.dependencies]
anyhow     = "1"
embedded-io = { version = "0.7", default-features = false }
reqwest    = { version = "0.12", features = ["json", "blocking"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
regex      = "1"
syn        = { version = "2", features = ["full", "visit"] }
# env crates from os-env-traits
env-traits = { git = "https://github.com/portal-co/os-env-traits.git" }
env-fake   = { git = "https://github.com/portal-co/os-env-traits.git" }
env-real   = { git = "https://github.com/portal-co/os-env-traits.git" }
# workspace crates
aiscan   = { path = "crates/aiscan" }
keyguard = { path = "crates/keyguard" }

# SWC dependencies

swc_atoms = "^8.0.0"
swc_common = "^16.0.0"
swc_ecma_ast = "^17.0.0"
swc_ecma_compat_es2015 = "^32.0.0"
swc_ecma_minifier = "^35.0.0"
swc_ecma_transforms_base = "^29.0.0"
swc_ecma_transforms_optimization = "^31.0.0"
swc_ecma_utils = "^23.0.0"
swc_ecma_visit = "^17.0.0"
swc_bundler = "^34.0.0"
swc_ecma_loader = "^16.0.0"
swc_ecma_parser = "^26.0.0"
swc_ecma_codegen = "^19"



portal-solutions-swibb = {version="^0.5.0",git="https://github.com/portal-co/swibb.git"}