[package]
name        = "aiscan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AI-content detection and RASP exploitation scanner: heuristic, HTTP, and runtime pattern-matching"

[dependencies]
embedded-io = { workspace = true }
env-traits = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
regex      = { workspace = true }

[dev-dependencies]
env-fake = { workspace = true }
